#262: Added CommandSecurityDefinitions to Filter Adjustment Percent UCs